Fixed window load issue for mobile

--- a/front-end-display/public/index.html
+++ b/front-end-display/public/index.html
@@ -7,7 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="This is a personal full-stack development project 
+      that aims to provide an eCommerce footwear service for users 
+      to purchase and review designer shoes. This project is completely 
+      fictional and developed to practice and demonstrate my skills 
+      using these technologies."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
